--- a/Frontend/styles/admin/user.css
+++ b/Frontend/styles/admin/user.css
@@ -5,6 +5,7 @@
   border: 1px solid #ccc;
   border-radius: 6px;
   font-size: 16px;
+  color: #333 ;
 }
 
 .user-list {
@@ -22,6 +23,7 @@
   margin-bottom: 1rem;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  color: #333;
 }
 
 .user-name-role {
