--- a/Frontend/styles/login.css
+++ b/Frontend/styles/login.css
@@ -11,6 +11,7 @@
   text-align: center;
   font-size: 2rem;
   margin-bottom: 1.5rem;
+  color: #333;
 }
 
 /* .login-container input {
@@ -74,6 +75,7 @@
   border: 1px solid #ccc;
   border-radius: 6px;
   background: transparent;
+  color: #333;
 }
 
 .input-container input:focus {
@@ -110,6 +112,7 @@
   cursor: pointer;
   font-size: 0.9rem;
   padding: 0;
+  color: #0070f3;
 }
 .spinner {
   border: 2px solid #f3f3f3;
