--- a/Frontend/styles/orderHistory.css
+++ b/Frontend/styles/orderHistory.css
@@ -1,9 +1,13 @@
 .order-history-container {
-  max-width: 1000px;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 2rem;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #f0f4f8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: calc(100vh - 134px);
 }
 
 .order-history-container h1 {
@@ -22,6 +26,7 @@
   padding: 2rem;
   transition: box-shadow 0.3s ease;
   border: 1px solid #e2e8f0;
+  width: 60vw;
 }
 
 .order-card:hover {
@@ -83,7 +88,7 @@
   padding-top: 1rem;
 }
 
-.total-amount-rs{
+.total-amount-rs {
   color: #22c55e;
 }
 
@@ -170,7 +175,6 @@
   background-color: #c62828;
 }
 
-
 .order-history-footer {
   background-color: #f7fafc;
   color: #4a5568;
@@ -178,6 +182,4 @@
   padding: 1rem;
   font-size: 0.95rem;
   border-top: 1px solid #e2e8f0;
-  margin-top: 4rem;
 }
-
